# runumbers_asr

./: .gitignore  README.md  pyproject.toml
configs/: base.yaml  smoke.yaml  v2.yaml
data/dev/: dev.csv
data/train/: train.csv
notebooks/: kaggle_submission.ipynb
reports/: report.md
reports/eda/: summary.json
scripts/: cache_audio.py  eda.py  evaluate_dev.py  infer.py  investigate_outliers.py  prepare_musan_noise.sh  smoke_pipeline.py  test_text.py  train.py
src/asr/: __init__.py  beam_search.py  data.py  infer.py  model.py  text.py  train.py
