[project]
name = "runumbers-asr"
version = "0.1.0"
description = "ASR for Russian spoken numbers (Kaggle ASR-2026)"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.2",
    "soundfile>=0.12",
    "librosa>=0.10",
    "num2words>=0.5.13",
    "tqdm>=4.66",
    "pyyaml>=6.0",
    "tensorboard>=2.17",
    "jiwer>=3.0",
    "matplotlib>=3.9",
    "torch>=2.4",
    "torchaudio>=2.4",
]

[project.optional-dependencies]
train = [
    "torch-audiomentations>=0.11",
    "pyctcdecode>=0.5",
    "sentencepiece>=0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/asr"]

[tool.uv]
dev-dependencies = [
    "ipykernel>=6.29",
    "jupyter>=1.1",
    "ruff>=0.6",
]
